fixed alignment in publications and changed abstract class

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ ul.posts li {
     list-style: none;
 }
 
-div.abstract {
+p.abstract {
 	margin-left: 10em;
 }
 
